--- a/src/global/styles/layout.scss
+++ b/src/global/styles/layout.scss
@@ -1,3 +1,31 @@
+/**
+ * CONTENTS
+ *
+ * LAYOUT SETUP
+ * Global...............General native elements properties
+ *
+ * LAYOUT
+ * .layout BEM block............... Block and nested elements properties
+ *
+ * THUMBNAIL
+ * .thumbnail BEM block............... Block and nested elements properties
+ *
+ * LIST
+ * .list BEM block............... Block and nested elements properties
+ *
+ * BTN
+ * .btn BEM block............... Block and nested elements properties
+ *
+ */
+
+
+
+
+
+/*------------------------------------*\
+  #LAYOUT SETUP
+\*------------------------------------*/
+
 html { height: 100%; }
 
 body {
@@ -17,6 +45,10 @@ h3 {
 
 
 
+/*------------------------------------*\
+  #LAYOUT
+\*------------------------------------*/
+
 .layout { 
     display: grid;
     grid-row-gap: 10px;
@@ -33,6 +65,9 @@ h3 {
 
 
 
+/*------------------------------------*\
+  #THUMBNAIL
+\*------------------------------------*/
 
 .thumbnail { }
 
@@ -45,6 +80,9 @@ h3 {
 
 
 
+/*------------------------------------*\
+  #LIST
+\*------------------------------------*/
 
 .list { }
 
@@ -65,6 +103,10 @@ h3 {
 
 
 
+
+/*------------------------------------*\
+  #BTN
+\*------------------------------------*/
 
 .btn { 
     border: none;
