Added Table Contents and sections titles for some global and components stylesheets

--- a/src/global/styles/theme.scss
+++ b/src/global/styles/theme.scss
@@ -1,3 +1,19 @@
+/**
+ * CONTENTS
+ *
+ * THEME COLOR PALETTES
+ * Color palettes...............Global css variables for theme colors
+ *
+ */
+
+
+
+
+ 
+/*------------------------------------*\
+  #THEME COLOR PALETTES
+\*------------------------------------*/
+
 :root {
   --main-bg-color: #f6f5f2;
 
