--- a/src/modules/Product/components/ProductRating/ProductRating.scss
+++ b/src/modules/Product/components/ProductRating/ProductRating.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  #ProductRating
+\*------------------------------------*/
+
 .ProductRating {
     overflow: hidden;
     display: inline-block;
