--- a/src/modules/Product/components/ProductReviewForm/ProductReviewForm.scss
+++ b/src/modules/Product/components/ProductReviewForm/ProductReviewForm.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  #ProductReviewForm
+\*------------------------------------*/
+
 .ProductReviewForm { 
     background-color: var(--teal-50);
     border-radius: 3px;
