--- a/src/modules/Product/components/ProductReviewsList/ProductReviewsList.scss
+++ b/src/modules/Product/components/ProductReviewsList/ProductReviewsList.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  #ProductReviewsList
+\*------------------------------------*/
+
 .ProductReviewsList { padding: 10px; }
 
     .ProductReviewsList__general-rating {
