--- a/src/modules/Product/Product.scss
+++ b/src/modules/Product/Product.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  #Product
+\*------------------------------------*/
+
 .Product { }
 
   .Product__product-thumbnail { }
