--- a/src/modules/Product/components/ProductReview/ProductReview.scss
+++ b/src/modules/Product/components/ProductReview/ProductReview.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  #ProductReview
+\*------------------------------------*/
+
 .ProductReview { 
     border-bottom: 1px solid var(--gray-300);
     padding-bottom: 10px; 
