--- a/src/modules/Product/Product.scss
+++ b/src/modules/Product/Product.scss
@@ -6,7 +6,10 @@
 
   .Product__product-thumbnail { }
 
-  .Product__product-details { padding: 10px; }
+  .Product__product-details { 
+    padding: 10px; 
+    position: relative;
+  }
 
   .Product__title { 
     font-family: 'Abel', sans-serif;
@@ -15,10 +18,12 @@
   }
 
   .Product__price {
+    border-bottom: 1px solid var(--gray-300);
     font-weight: bold;
     font-size: 22px;
     color: var(--teal-700-a);
     margin: 0;
+    padding-bottom: 5px;
   }
 
   .Product__product-reviews {
@@ -43,3 +48,21 @@
   .Product__review-form { }
 
   .Product__review-form--hidden { display: none; }
+
+  .Product__color-picker { margin-top: 10px; }
+
+  .Product__size-picker { margin-top: 20px; }
+
+  .Product__add-to-cart {
+    bottom: 0;
+    margin-right: 5px;
+    position: absolute;
+    right: 0;
+  }
+
+  .Product__specifications-list { 
+    color: var(--gray-700);
+    line-height: 30px;
+    margin: 20px 0;
+    padding-left: 20px;
+  }
