--- a/src/global/styles/layout.scss
+++ b/src/global/styles/layout.scss
@@ -116,13 +116,10 @@ h3 {
 \*------------------------------------*/
 
 .btn { 
-    align-items: center;
     border: none;
     border-radius: 3px;
-    display: flex;
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
-    justify-content: center;
     height: 40px;
     letter-spacing: 1px;
     outline: none;
@@ -157,6 +154,12 @@ h3 {
         background-color: var(--gray-300);
         color: var(--gray-900);
     }
+}
+
+.btn--center-content {
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 
