--- a/src/modules/Product/Product.scss
+++ b/src/modules/Product/Product.scss
@@ -62,6 +62,7 @@
 
   .Product__specifications-list { 
     color: var(--gray-700);
+    font-size: 13px;
     line-height: 30px;
     margin: 20px 0;
     padding-left: 20px;
