--- a/src/global/styles/variables.scss
+++ b/src/global/styles/variables.scss
@@ -13,3 +13,10 @@
 /*------------------------------------*\
   #VARIABLES AND MIXINS
 \*------------------------------------*/
+
+/*shoes colors*/
+
+$shoes-black: #222;
+$shoes-blue: #0e6cd1;
+$shoes-dark-blue: #062c72;
+$shoes-gray: #d8d8d6;
